--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   file_picker: ^10.1.2
   path_provider: ^2.1.5
   permission_handler: ^12.0.0+1
+  audio_metadata_reader: ^1.1.2
+  audiotags: ^1.4.5
+  mime: ^2.0.0
+  provider: ^6.1.4
   #saf: ^1.0.3+4
 
 dev_dependencies:
@@ -61,7 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+  - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
