--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   audiotags: ^1.4.5
   mime: ^2.0.0
   provider: ^6.1.4
-  #saf: ^1.0.3+4
+  musicbrainz_api_client: ^0.1.7
 
 dev_dependencies:
   flutter_test:
