--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  audioplayers: ^6.4.0
   file_picker: ^10.1.2
   path_provider: ^2.1.5
   permission_handler: ^12.0.0+1
@@ -40,6 +39,11 @@ dependencies:
   mime: ^2.0.0
   provider: ^6.1.4
   musicbrainz_api_client: ^0.1.7
+  just_audio: ^0.10.0
+  audio_session: ^0.1.15
+  audio_service: ^0.18.7
+  just_audio_media_kit: ^2.1.0
+  media_kit_libs_windows_audio: ^1.0.9
 
 dev_dependencies:
   flutter_test:
