--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   file_picker: ^10.1.2
   path_provider: ^2.1.5
+  json_annotation: ^4.3.0
   permission_handler: ^12.0.0+1
   audio_metadata_reader: ^1.1.2
   audiotags: ^1.4.5
@@ -49,6 +50,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   audioplayers_platform_interface: ^7.1.0
+  json_serializable: ^6.9.5
+  build_runner: ^2.4.15
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
