--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   audio_session: ^0.2.1
   just_audio: ^0.10.2
   just_audio_media_kit: ^2.1.0
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
