--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   just_audio: ^0.10.2
   just_audio_media_kit: ^2.1.0
   http: ^1.4.0
+  media_kit: ^1.1.11
+  media_kit_libs_audio: ^1.0.5
 
 dev_dependencies:
   flutter_test:
