--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   http: ^1.4.0
   media_kit: ^1.1.11
   media_kit_libs_audio: ^1.0.5
+  uuid: ^4.5.1
+  crypto: ^3.0.6
 
 dev_dependencies:
   flutter_test:
