--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   media_kit_libs_audio: ^1.0.5
   uuid: ^4.5.1
   crypto: ^3.0.6
+  media_kit_libs_linux: ^1.2.1
+  file_selector: ^1.0.3
 
 dev_dependencies:
   flutter_test:
